--- a/package.json
+++ b/package.json
@@ -3,21 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "test": "jest",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
+    "@discordjs/opus": "0.8.0",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "@types/wav": "^1.0.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "microsoft-cognitiveservices-speech-sdk": "^1.25.1",
+    "msr": "^1.3.4",
     "next": "13.1.6",
+    "openai": "^3.1.0",
+    "pino": "^8.10.0",
+    "prism-media": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "rxjs": "^7.8.0",
+    "rxjs-stream": "^5.0.0",
+    "stream-buffers": "^3.0.2",
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
+    "@types/uuid": "^9.0.0",
+    "autoprefixer": "^10.4.13",
+    "jest": "^29.4.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
+    "ts-jest": "^29.0.5",
+    "webpack-node-externals": "^3.0.0"
   }
 }
