refactor: rename endpoints, add logging, change favicon

--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,5 @@ AZURE_SPEECH_SDK_KEY=
 AZURE_SPEECH_SDK_REGION=germanywestcentral
 AZURE_SPEECH_SDK_LANGUAGE=de-DE
 OPENAI_KEY=
+
+OPENAI_PROMPT=Create a scrum user story from the following requirements with a story, requirements and acceptance criteria:
