--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.6",
     "openai": "^3.1.0",
     "pino": "^8.11.0",
+    "pino-pretty": "^9.4.0",
     "prism-media": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
